package draughts.controllers;

public abstract class Controller {

    public Controller() {
    }

}