package draughts.types;

public enum Color {
    WHITE,
    BLACK
}
