package draughts.types;

public enum Error {
    BAD_STRING,
    OUT_COORDINATE,
    EMPTY_ORIGIN,
    OPPOSITE_PIECE,
    NOT_DIAGONAL,
    BAD_DISTANCE,
    NOT_EMPTY_TARGET,
    NOT_ADVANCED,
    EATING_EMPTY
}
